--- a/styles.css
+++ b/styles.css
@@ -55,10 +55,26 @@ body {
     gap: 110px;
 }
 
-.pScore, .cScore {
+.pep, .comp {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+#message {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
+    font-weight: bold;
+}
+
+#fMessage {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
+    font-weight: bold;
 }
 
 
