--- a/styles.css
+++ b/styles.css
@@ -77,4 +77,27 @@ body {
     font-weight: bold;
 }
 
+.containerSix {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.button {
+    width: 100px;
+    height: 100px;
+    background-color: white;
+    border: 1px solid black;
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
+    font-weight: bold;
+    color: black;
+    transition: 0.5s;
+    
+}
+
 
