--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,55 @@
 body {
     margin: 0;
     height: 100vh;
-    background: linear-gradient(lightblue , black);
+    background: cyan;
 }
 
-.containerOne {
+
+.containerZero {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-size: 50px;
 }
 
-.containerTwo {
+#firstMessage {
+    font-size: 50px;
+    font-weight: bold;
+    animation: fadeIn 2s ease-in-out;
+}
+
+#secondMessage {
+    font-size: 50px;
+    font-weight: bold;
+    animation: fadeIn 6s ease-in-out;
+}
+
+#thirdMessage {
+    font-size: 50px;
+    font-weight: bold;
+    animation: fadeIn 8s ease-in;
+}
+
+#fourthMessage {
+    font-size: 50px;
+    font-weight: bold;
+    animation-delay: 5s;
+}
+
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+    
+
+
+.containerOne {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,7 +63,7 @@ body {
 .rbox, .pbox, .sbox {
     width: 100px;
     height: 100px;
-    background-color: white;
+    background-color: transparent;
     border: 1px solid black;
     margin: 10px;
     display: flex;
@@ -34,7 +73,6 @@ body {
     font-weight: bold;
     color: black;
     transition: 0.5s;
-    
 }
 
 .rbox:hover, .pbox:hover, .sbox:hover {
