--- a/styles.css
+++ b/styles.css
@@ -55,14 +55,19 @@ body {
     align-items: center;
 }
 
+.containerTwo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .boxHolder {
     display: flex;
     flex-direction: row;
 }
 
-.boxHolder .rbox,
-.boxHolder .pbox,
-.boxHolder .sbox {
+.rbox, .pbox, .sbox{
     width: 100px;
     height: 100px;
     background-color: transparent;
@@ -75,6 +80,11 @@ body {
     font-weight: bold;
     color: black;
     transition: 0.5s;
+}
+
+.rbox img, .sbox img, .pbox img {
+    width: 100%;
+    height: 100%;
 }
 
 .rbox:hover, .pbox:hover, .sbox:hover {
@@ -137,5 +147,4 @@ body {
     text-align: center;
 }
 
-  
 
