--- a/styles.css
+++ b/styles.css
@@ -1,41 +1,65 @@
 body {
     margin: 0;
     height: 100vh;
-    background: cyan;
+    background-color: cyan;
 }
 
-
 .containerZero {
-    
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     font-size: 50px;
+    background:url('images/virus.gif');
+    margin: 0;
+    height: 100vh;
+}
+
+#firstMessage, #secondMessage, #thirdMessage {
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
 }
 
 #firstMessage {
-    font-size: 50px;
-    font-weight: bold;
-    animation: fadeIn 2s ease-in-out;
+    position: relative;
+    opacity: 0;
+    left: -100px; 
+    animation: slideIn 1.5s forwards; 
+    animation-delay: 1s; /
 }
+
 
 #secondMessage {
-    font-size: 50px;
-    font-weight: bold;
-    animation: fadeIn 6s ease-in-out;
+    position: relative;
+    opacity: 0;
+    left: -100px; 
+    animation: slideIn 1.5s forwards; 
+    animation-delay: 2.5s; /
+}   
+
+
+@keyframes slideIn {
+    0% {
+        opacity: 0;
+        left: -100px;
+    }
+    100% {
+        opacity: 1;
+        left: 0;
+    }
+}
+#thirdMessage {
+    position: relative;
+    opacity: 0;
+    left: 100px;
+    animation: slideIn 1.5s forwards; 
+    animation-delay: 3.5s;     
 }
 
-#thirdMessage {
-    font-size: 50px;
-    font-weight: bold;
-    animation: fadeIn 8s ease-in;
-}
 
 #fourthMessage {
-    font-size: 50px;
-    font-weight: bold;
-    animation-delay: 5s;
+    
 }
 
 
