--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,7 @@ body {
 .containerOne {
     display: flex;
     justify-content: center;
+    height: 25vh;
     align-items: center;
 }
 
@@ -87,12 +88,11 @@ body {
 
 .boxHolder {
     display: flex;
-    flex-direction: row;
 }
 
 .rbox, .pbox, .sbox{
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
     background-color: transparent;
     border: 1px solid white;
     margin: 10px;
@@ -114,6 +114,7 @@ body {
     border: greenyellow 1px solid;
     transform: scale(1.2);
 }
+
 
 .containerThree {
     display: flex;
@@ -184,7 +185,7 @@ body {
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-color: rgba(228, 15, 15, 0.568);
+    background-color: rgba(179, 48, 48, 0.568);
     display: flex;
     justify-content: center;
     align-items: center;
